Adjust theme attribute to body for easier merges

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR" data-theme="light">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -39,7 +39,7 @@
         --layout-gap: clamp(20px, 3vw, 28px);
       }
 
-      :root[data-theme='dark'] {
+      body[data-theme='dark'] {
         --bg-primary: #0b1220;
         --bg-secondary: #0f1a32;
         --bg-tertiary: #14223d;
@@ -401,13 +401,13 @@
         box-shadow: inset 0 0 0 1px rgba(15, 23, 42, 0.25);
       }
 
-      :root[data-theme='dark'] .theme-toggle button:hover,
-      :root[data-theme='dark'] .theme-toggle button:focus-visible {
+      body[data-theme='dark'] .theme-toggle button:hover,
+      body[data-theme='dark'] .theme-toggle button:focus-visible {
         background: rgba(165, 180, 252, 0.16);
         color: var(--accent-strong);
       }
 
-      :root[data-theme='dark'] .theme-toggle button[aria-pressed='true'] {
+      body[data-theme='dark'] .theme-toggle button[aria-pressed='true'] {
         color: #0f172a;
       }
 
@@ -1868,7 +1868,7 @@
       }
     </style>
   </head>
-  <body data-locked="true">
+  <body data-locked="true" data-theme="light">
     <section
       class="session-lock-overlay"
       data-lock-overlay
@@ -2561,7 +2561,7 @@
           return;
         }
         const resolved = resolveSystemTheme();
-        document.documentElement.dataset.theme = resolved;
+        document.body.dataset.theme = resolved;
         updateThemeIndicators('auto', resolved);
       }
 
@@ -2577,7 +2577,7 @@
       }
 
       function setThemeMode(mode, { persist = true } = {}) {
-        const root = document.documentElement;
+        const root = document.body;
         const resolved = mode === 'auto' ? resolveSystemTheme() : mode;
         currentThemeMode = mode;
         root.dataset.themeMode = mode;
@@ -2636,7 +2636,7 @@
           const preference = resolveThemePreference();
           setThemeMode(preference, { persist: false });
         } else {
-          updateThemeIndicators(currentThemeMode, document.documentElement.dataset.theme);
+          updateThemeIndicators(currentThemeMode, document.body.dataset.theme);
         }
 
         attachThemeListeners();
