--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=./src/index.html" />
+    <meta http-equiv="refresh" content="0; url=./appbase/index.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marco · Redirecionando…</title>
-    <link rel="canonical" href="./src/index.html" />
+    <link rel="canonical" href="./appbase/index.html" />
     <style>
       body {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
@@ -24,7 +24,7 @@
   </head>
   <body>
     <p>
-      Carregando interface Marco… <a href="./src/index.html">clique aqui</a> caso não seja redirecionado.
+      Carregando interface Marco… <a href="./appbase/index.html">clique aqui</a> caso não seja redirecionado.
     </p>
   </body>
 </html>
