Inicializa painel sem cadastro e adiciona placeholders

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -106,7 +106,10 @@
 
         <main class="ac-stage" role="main">
           <div class="ac-stage__empty" data-stage-empty>
-            <p>Selecione uma etiqueta para abrir o miniapp.</p>
+            <p>Nenhum usuário cadastrado. Inicie o cadastro para ativar o painel.</p>
+            <button class="ac-btn" type="button" data-overlay-open="login">
+              Começar cadastro
+            </button>
           </div>
 
           <section
