Refine registration flow and event handling

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -305,6 +305,7 @@
                       <option value="Backup">Backup</option>
                       <option value="Sync">Sync</option>
                       <option value="Login">Login</option>
+                      <option value="account_created">Cadastro</option>
                       <option value="Ping">Ping</option>
                     </select>
                   </label>
