Improve cadastro validation and submission flow

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -433,7 +433,7 @@
           </section>
         </div>
         <footer class="ac-sheet__foot">
-          <button class="ac-btn" type="button" data-action="login-save">
+          <button class="ac-btn" type="submit" data-action="login-save">
             Salvar
           </button>
           <button
