feat: add login overlay feedback messaging

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -402,6 +402,13 @@
             </label>
           </form>
 
+          <p
+            class="ac-feedback"
+            data-login-feedback
+            role="status"
+            aria-live="polite"
+          ></p>
+
           <section class="ac-sheet__section">
             <h5 class="ac-sheet__subtitle">Dispositivos conectados</h5>
             <div class="ac-table-wrap ac-table-wrap--inner">
