Exibir histórico vazio no estado ocioso do painel

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -102,6 +102,9 @@
             >
               Começar cadastro
             </button>
+            <p class="ac-history__empty ac-history__empty--stage" data-login-log-empty>
+              Nenhum evento registrado até o momento.
+            </p>
           </div>
 
           <section
