Fix theme toggle icon state

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -35,7 +35,7 @@
             title="Ativar modo escuro"
           >
             <span class="ac-theme-toggle__icon" data-theme-toggle-icon aria-hidden="true"
-              >🌙</span
+              >☀️</span
             >
           </button>
         </div>
